# asp-chef-mcp-server

./: .gitignore  README.md  pyproject.toml
src/asp_chef_mcp_server/: asp_chef_docs.py  asp_skill_library.py  recipe_state.py  server.py
src/asp_chef_mcp_server/clingo_manual/: asp-clingo-syntax.md  asp-modeling-patterns.md  asp-pattern-assignment-scheduling.md  asp-pattern-graph-reachability.md  asp-pattern-index.md  asp-pattern-optimization-symmetry.md  asp-pattern-selection-covering-packing.md
tests/: test_asp_skill_library.py
