[project]
name = "asp-chef-mcp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "pit0500",email = "pietro.macri2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "uvicorn (>=0.42.0,<0.43.0)",
    "fastmcp (>=3.1.1,<4.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
